# stocks_trading

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
installer/: build_msi.py
installer/scheduled_tasks/: README.md  news_daily.xml  tw_market_close.xml  us_market_close.xml
packaging/: README.md  windows_scheduler_template.xml
pm/: consistency_review.md  event_storming.md  release_plan.md  requirements.html  requirements.md  requirements_review.md
sa/: architecture.md  component_design.md  data_design.md  tech_decisions.md
src/stocks_trading/: __init__.py  app.py
tests/: conftest.py  test_app.py  test_smoke.py
tests/analytics/: test_aggregator.py  test_indicators.py  test_patterns.py
tests/backtest/: test_backtest_engine.py  test_fill_engine.py  test_portfolio_state.py
tests/brokers/: test_base.py  test_simulated_broker.py
tests/cli/: test_backtest.py  test_cli.py  test_daily_routine.py  test_signal_list.py  test_strategy_factory.py
tests/concurrency/: test_async_fetcher.py
tests/config/: test_store.py
tests/data/: test_market_data_router.py  test_shioaji_provider.py  test_yfinance_provider.py
tests/domain/: test_account.py  test_bar.py  test_mode.py  test_money.py  test_side.py  test_signal.py  test_signal_status.py  test_symbol.py
tests/news/: test_analyzer.py  test_claude_cli_analyzer.py  test_collector.py  test_collector_integration.py  test_cost_guard.py  test_pipeline.py  test_promotion_service.py  test_ranker.py  test_rss_adapter.py  test_ticker_mapper.py  test_yfinance_news_adapter.py
tests/notify/: test_daily_summary.py  test_news_digest.py  test_notification_service.py  test_smtp_client.py  test_system_alert.py
tests/paper_trading/: test_fee_calculator.py  test_reset_service.py  test_service.py
tests/risk/: test_guard.py
tests/security/: test_dpapi.py
tests/storage/: test_account_repository.py  test_audit_log_repository.py  test_blacklist_repository.py  test_daily_pnl_repository.py  test_initial_schema.py  test_kbars_repository.py  test_migration.py  test_news_analysis_repository.py  test_news_article_repository.py  test_news_tickers_repository.py  test_positions_repository.py  test_signal_repository.py  test_source_credibility_repository.py  test_watchlist_repository.py
(+113 files in other folders)
